--- a/webapps/myWebSite/WEB-INF/web.xml
+++ b/webapps/myWebSite/WEB-INF/web.xml
@@ -66,4 +66,19 @@
 		<url-pattern>/hellogen</url-pattern>
 	</servlet-mapping>
 
+
+	<!--又一个java文件,第三种实现Servlet的方式-->
+	<servlet>
+		<servlet-name>hellohttp</servlet-name>
+		<!--指明servlet的路径（包名+类名）-->
+		<servlet-class>com.liu.HelloHttp</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>hellohttp</servlet-name>
+		<!--浏览器访问当前servlet的url,需要加上
+		webapp文件夹的名字，这里就是myWebSite/hellogen
+		-->
+		<url-pattern>/hellohttp</url-pattern>
+	</servlet-mapping>
+
 </web-app>
