--- a/webapps/myWebSite/WEB-INF/web.xml
+++ b/webapps/myWebSite/WEB-INF/web.xml
@@ -28,9 +28,9 @@
   version="3.0"
   metadata-complete="true">
 
-  <display-name>Welcome to Tomcat</display-name>
+  <display-name>这是我的第一个tomcat web应用</display-name>
   <description>
-     Welcome to Tomcat
+     这是我的第一个tomcat应用
   </description>
 
 	<!--
@@ -80,5 +80,39 @@
 		-->
 		<url-pattern>/hellohttp</url-pattern>
 	</servlet-mapping>
+
+
+
+	<!--login-->
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>com.liu.Login</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+
+	<!--loginCl-->
+	<servlet>
+		<servlet-name>loginCl</servlet-name>
+		<servlet-class>com.liu.LoginCl</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>loginCl</servlet-name>
+		<url-pattern>/loginCl</url-pattern>
+	</servlet-mapping>
+
+	<!--Welcome-->
+	<servlet>
+		<servlet-name>welcome</servlet-name>
+		<servlet-class>com.liu.Welcome</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>welcome</servlet-name>
+		<url-pattern>/welcome</url-pattern>
+	</servlet-mapping>
+
+	
 
 </web-app>
