上一个提交使用git add . 由于所在目录不同，没有把web.xml提交上 以后要不在正确的目录提交，要不使用git add -u提交

--- a/webapps/myWebSite/WEB-INF/web.xml
+++ b/webapps/myWebSite/WEB-INF/web.xml
@@ -113,6 +113,37 @@
 		<url-pattern>/welcome</url-pattern>
 	</servlet-mapping>
 
+
+	<!--userdel-->
+	<servlet>
+		<servlet-name>del</servlet-name>
+		<servlet-class>com.liu.UserDel</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>del</servlet-name>
+		<url-pattern>/userdel</url-pattern>
+	</servlet-mapping>
+
+	<!--error-->
+	<servlet>
+		<servlet-name>error</servlet-name>
+		<servlet-class>com.liu.Error</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>error</servlet-name>
+		<url-pattern>/error</url-pattern>
+	</servlet-mapping>
+
+	<!--ok-->
+	<servlet>
+		<servlet-name>ok</servlet-name>
+		<servlet-class>com.liu.Ok</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ok</servlet-name>
+		<url-pattern>/ok</url-pattern>
+	</servlet-mapping>
+
 	
 
 </web-app>
