第一个JSP例子：Hello world 还是Servlet那个运行开发环境，不必再安装什么新的软件。 在与WEB-INF同级的目录里编写jsp文件 本次是新的一个webapps，也就是myJspSite,那么访问url应该是： http://localhost:8080/myJspSite/hello.jsp jsp的语法类似与php和html混编

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,11 @@ Thumbs.db
 # Mac DS_Store Files
 .DS_Store
 
-# java编译后的文件
+# servlet java编译后的文件
 *.class
 #忽略名字为logs的目录及其目录下的所有文件，但不忽略名字为logs文件
 logs/
+
+#jsp转换成servlet，所在的目录里的东西及class文件.这里就是work/Catalina/localhost/myJspSite
+Catalina/
 
