mvc开发模式初探,可以说是一个里程碑。 继续在src目录下编写纯java文件，LoginCrontroller担当mvc的c角色 src下有两个包，一个是model包，一个是controller包。 login.jsp提交请求到servlet（当然得配置web.xml) 这样loginCl.jsp就没有用了，因为它就是为了验证，并不是显示html等用户界面，所以这个文件完成的逻辑完全不应该用jsp文件。而是由控制器来完成 在控制器里的跳转使用了新方法，不是response.sendRedirect()方法，后续再研究 学习了Intellij Idea的Build功能，把class文件自动放置到classes目录里

--- a/webapps/myJspSite/WEB-INF/web.xml
+++ b/webapps/myJspSite/WEB-INF/web.xml
@@ -28,9 +28,17 @@
   version="3.0"
   metadata-complete="true">
 
-  <display-name>这是我的第一个JSP应用</display-name>
+  <display-name>JSP应用，还有纯java文件</display-name>
   <description>
-     这是我的第一个tomcat应用
   </description>
 
+    <!--loginCl-->
+    <servlet>
+        <servlet-name>loginCl</servlet-name>
+        <servlet-class>com.liu.controller.LoginCrontroller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>loginCl</servlet-name>
+        <url-pattern>/loginCl</url-pattern>
+    </servlet-mapping>
 </web-app>
