第一个struts2的Demo，输出【hello 刘师傅】 熟悉struts2的目录结构是啥样的（其实是java web程序是啥样子的） struts.xml在放置在src目录下的，核心配置文件 配置了url和Action的对应关系，且输出找哪个jsp，就在那一个个的<action>中配置 jsp文件是放在WEB-INF下的。这和之前学习jsp的时候是一样的。 WEB-INF下有自己的lib文件，里面就是struts需要的jar包。这些jar包是从struts源码包里拷贝而来。 LmwHelloAction里的一个execute方法，继承父类ActionSupport而来。这个方法固定输出了"success"字符串

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ Thumbs.db
 
 # phpunit itself is not needed
 *.class
+
+#struts的压缩包,源码包
+*.zip
+struts-2.3.34-src
+#tomcat配置文件目录，是在eclipse安装了javaee插件后，把项目加到tomcat启动tomcat才有的
+Servers
