jdbcTmplate完成更新操作 批量插入（注意数据格式） AR映射，直接把从数据库检索出的一行记录映射为一个模型对象，RowMapper

--- a/springJDBCTemplate/bin/jdbc.properties
+++ b/springJDBCTemplate/bin/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.user=deployment
 jdbc.pwd=123456
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useSSL=false&character=utf8
+jdbc.url=jdbc:mysql://localhost:3306/test?useSSL=false&characterEncoding=utf8
