--- a/springJDBCTemplate/jdbcConf/jdbc.properties
+++ b/springJDBCTemplate/jdbcConf/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.user=deployment
 jdbc.pwd=123456
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useSSL=false&character=utf8
+jdbc.url=jdbc:mysql://localhost:3306/test?useSSL=false&characterEncoding=utf8
