--- a/springJDBCTemplate/conf/jdbc.properties
+++ b/springJDBCTemplate/conf/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.user=deployment
-jdbc.pwd=123456
+jdbc.user=root
+jdbc.pwd=
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/test?useSSL=false&characterEncoding=utf8
